--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,14 @@ asgiref==3.5.2
 Django==4.0.5
 django-debug-toolbar==3.4.0
 django-ninja==0.18.0
+django-seed==0.3.1
 djangorestframework==3.13.1
+Faker==13.12.1
+install==1.3.5
 pydantic==1.9.1
+python-dateutil==2.8.2
 pytz==2022.1
+six==1.16.0
 sqlparse==0.4.2
+toposort==1.7
 typing_extensions==4.2.0
