--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-seed==0.3.1
 djangorestframework==3.13.1
 Faker==13.12.1
 install==1.3.5
+psycopg2-binary==2.9.3
 pydantic==1.9.1
 python-dateutil==2.8.2
 pytz==2022.1
