--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "python.linting.pylintArgs": [
       "--load-plugins",
       "pylint_django",
-      "--django-settings-module=example.settings"
+      "--disable=django-not-configured",
+      "--django-settings-module=shrinker.settings",
     ]
   }
