--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,13 @@
-asgiref==3.5.2
-Django==4.0.5
-django-debug-toolbar==3.4.0
-django-ninja==0.18.0
-django-seed==0.3.1
-djangorestframework==3.13.1
-Faker==13.12.1
-install==1.3.5
-mysqlclient==2.1.0
-psycopg2-binary==2.9.3
-pydantic==1.9.1
-python-dateutil==2.8.2
-pytz==2022.1
-six==1.16.0
-sqlparse==0.4.2
-toposort==1.7
+astroid==2.11.6
+dill==0.3.5.1
+isort==5.10.1
+lazy-object-proxy==1.7.1
+mccabe==0.7.0
+mypy==0.961
+mypy-extensions==0.4.3
+platformdirs==2.5.2
+pylint==2.14.1
+tomli==2.0.1
+tomlkit==0.11.0
 typing_extensions==4.2.0
+wrapt==1.14.1
