--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,76 @@
-astroid==2.11.6
+aiohttp==3.8.1
+aiosignal==1.2.0
+asgiref==3.5.2
+astroid==2.11.5
+async-timeout==4.0.2
+attrs==21.4.0
+CacheControl==0.12.11
+cachy==0.3.0
+certifi==2022.5.18.1
+charset-normalizer==2.0.12
+cleo==0.8.1
+clikit==0.6.2
+crashtest==0.3.1
 dill==0.3.5.1
+distlib==0.3.4
+Django==4.0.5
+django-debug-toolbar==3.4.0
+django-ninja==0.18.0
+django-ratelimit==3.0.1
+django-seed==0.3.1
+django-stubs==1.11.0
+django-stubs-ext==0.4.0
+django-user-agents==0.4.0
+djangorestframework==3.13.1
+Faker==13.12.1
+filelock==3.7.1
+frozenlist==1.3.0
+geoip2==4.5.0
+html5lib==1.1
+idna==3.3
+install==1.3.5
 isort==5.10.1
+keyring==23.6.0
 lazy-object-proxy==1.7.1
+lockfile==0.12.2
+maxminddb==2.2.0
 mccabe==0.7.0
-mypy==0.961
+msgpack==1.0.4
+multidict==6.0.2
+mypy==0.950
 mypy-extensions==0.4.3
+mysqlclient==2.1.0
+packaging==20.9
+pastel==0.2.1
+pexpect==4.8.0
+pkginfo==1.8.3
 platformdirs==2.5.2
+poetry-core==1.0.8
+psycopg2-binary==2.9.3
+ptyprocess==0.7.0
+pydantic==1.9.1
+pylev==1.4.0
 pylint==2.14.1
+pylint-django==2.5.3
+pylint-plugin-utils==0.7
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2022.1
+requests==2.28.0
+requests-toolbelt==0.9.1
+shellingham==1.4.0
+six==1.16.0
+sqlparse==0.4.2
 tomli==2.0.1
 tomlkit==0.11.0
+toposort==1.7
+types-pytz==2021.3.8
+types-PyYAML==6.0.8
 typing_extensions==4.2.0
+ua-parser==0.10.0
+urllib3==1.26.9
+user-agents==2.2.0
+virtualenv==20.14.1
+webencodings==0.5.1
 wrapt==1.14.1
+yarl==1.7.2
